--- a/index.html
+++ b/index.html
@@ -832,6 +832,14 @@ document.addEventListener('DOMContentLoaded', () => {
     Compila il modulo per donare i tuoi libri alla biblioteca. I campi contrassegnati con <span class="required-asterisk">*</span> sono obbligatori. E' raccomandato compilare anche il campo ISBN per garantire una più accurata identificazione dei volumi.
 </div>
 
+	    
+<div class="mb-6">
+    <a href="https://www.bibliotechediroma.it/opac" 
+       class="inline-flex items-center gap-2 px-4 py-2 bg-[#970a2c] text-white rounded hover:bg-[#7d0824] transition-colors">
+        <i class="fas fa-search bg-white text-[#970a2c] p-2 rounded"></i>
+        Cerca nel catalogo delle biblioteche di Roma
+    </a>
+</div>
             
             <form id="donationForm" novalidate>
 		    <div id="error-root"></div>
