--- a/index.html
+++ b/index.html
@@ -754,6 +754,13 @@ document.addEventListener('DOMContentLoaded', () => {
   <a href="https://culture.roma.it/" class="tooltip-container" target="_blank">
     <img src="roma.png" alt="Logo Roma" class="roma-logo">
   </a>
+
+
+<a href="https://www.bibliotechediroma.it/opac" class="tooltip-container" target="_blank">
+    <div style="background-color: #970a2c; width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; border-radius: 4px;">
+        <i class="fas fa-search" style="color: white;"></i>
+    </div>
+</a>	    
   <div class="social-icons">
     <a href="https://www.facebook.com/biblioteca.elsamorante?locale=it_IT" target="_blank" class="tooltip-container">
       <i class="fab fa-facebook"></i>
@@ -833,13 +840,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </div>
 
 	    
-<div class="mb-6">
-    <a href="https://www.bibliotechediroma.it/opac" 
-       class="inline-flex items-center gap-2 px-4 py-2 bg-[#970a2c] text-white rounded hover:bg-[#7d0824] transition-colors">
-        <i class="fas fa-search bg-white text-[#970a2c] p-2 rounded"></i>
-        Cerca nel catalogo delle biblioteche di Roma
-    </a>
-</div>
+
             
             <form id="donationForm" novalidate>
 		    <div id="error-root"></div>
