--- a/index.html
+++ b/index.html
@@ -756,11 +756,13 @@ document.addEventListener('DOMContentLoaded', () => {
   </a>
 
 
-<a href="https://www.bibliotechediroma.it/opac" class="tooltip-container" target="_blank">
-    <div style="background-color: #970a2c; width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; border-radius: 4px;">
-        <i class="fas fa-search" style="color: white;"></i>
+<a href="https://www.bibliotechediroma.it/opac" class="tooltip-container" target="_blank" style="display: inline-flex; margin-right: 8px;">
+    <div style="background-color: #970a2c; width: 22px; height: 22px; display: flex; align-items: center; justify-content: center; border-radius: 4px;">
+        <i class="fas fa-search" style="color: white; font-size: 12px;"></i>
     </div>
-</a>	    
+</a>
+
+	    
   <div class="social-icons">
     <a href="https://www.facebook.com/biblioteca.elsamorante?locale=it_IT" target="_blank" class="tooltip-container">
       <i class="fab fa-facebook"></i>
