--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 
 <div class="social-icons">
-    <a href="https://www.bibliotechediroma.it/opac" class="tooltip-container" target="_blank">
+    <a href="https://www.bibliotechediroma.it/opac" title="Cerca nel catalogo delle biblioteche di Roma" target="_blank">
         <div style="background-color: #970a2c; width: 26px; height: 26px; display: flex; align-items: center; justify-content: center; border-radius: 4px;">
             <i class="fas fa-search" style="color: white; font-size: 14px;"></i>
         </div>
