--- a/index.html
+++ b/index.html
@@ -688,7 +688,17 @@ document.head.appendChild(style);
     white-space: normal !important;
     line-height: 1.4 !important;
   }
-</style>
+
+
+	/* Stile base per tutte le etichette dei campi */
+label {
+    color: #1a1a1a !important; /* Grigio molto scuro quasi nero per massimo contrasto */
+    font-weight: 600 !important; /* Semi-bold per maggiore leggibilità */
+    font-size: 0.95rem !important; /* Dimensione leggermente aumentata */
+    letter-spacing: 0.01em !important; /* Spaziatura caratteri migliorata */
+    margin-bottom: 0.5rem !important; /* Spazio aumentato sotto le etichette */
+    display: inline-block !important;
+}
 	
     </style>
 
