--- a/index.html
+++ b/index.html
@@ -825,11 +825,13 @@ document.addEventListener('DOMContentLoaded', () => {
          class="location-icon h-5 w-5">
 </a>
 			
-                   <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
+<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
    target="_blank"
-   class="biblioteca-link">
+   class="biblioteca-link"
+   title="Clicca qui per vedere gli appuntamenti della biblioteca">
    Biblioteca Elsa Morante
 </a>
+
 
                 </div>
                 <h1 class="text-3xl md:text-4xl text-slate-700 font-bold leading-tight text-left">
