--- a/index.html
+++ b/index.html
@@ -525,20 +525,11 @@ document.head.appendChild(style);
 }
 
 
-/* Specific targeting for Roma logo tooltip */
-.top-banner > a.tooltip-container::before {
-    bottom: -20px; /* Posizione ancora più in alto */
-    left: 0;
-    transform: translateX(0);
-    background-color: white;
-    color: black;
-    border: 1px solid #ddd;
-    white-space: nowrap;
-    width: max-content;
-    padding: 5px 10px; /* Aumentato il padding per maggiore altezza */
-    font-size: 14px; /* Aumentato il font per aumentare l'altezza */
-    font-style: italic; /* Impostato il testo in corsivo */
+/* Stili per il banner (se necessario) */
+.top-banner {
+    /* eventuali stili per il banner */
 }
+
 
 
 
