--- a/index.html
+++ b/index.html
@@ -502,7 +502,24 @@ document.head.appendChild(style);
     display: inline-block;
 }
 
-
+/* Common tooltip styles for all tooltips */
+.tooltip-container::before {
+  content: "Questo link si apre in una nuova finestra";
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 5px 10px;
+  background: rgba(0, 0, 0, 0.8);
+  color: white;
+  border-radius: 4px;
+  font-size: 14px;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.2s;
+  white-space: nowrap;
+  z-index: 1000;
+}
 
 /* Show tooltip on hover */
 .tooltip-container:hover::before {
@@ -525,11 +542,20 @@ document.head.appendChild(style);
 }
 
 
-/* Stili per il banner (se necessario) */
-.top-banner {
-    /* eventuali stili per il banner */
+/* Specific targeting for Roma logo tooltip */
+.top-banner > a.tooltip-container::before {
+    bottom: -20px; /* Posizione ancora più in alto */
+    left: 0;
+    transform: translateX(0);
+    background-color: white;
+    color: black;
+    border: 1px solid #ddd;
+    white-space: nowrap;
+    width: max-content;
+    padding: 5px 10px; /* Aumentato il padding per maggiore altezza */
+    font-size: 14px; /* Aumentato il font per aumentare l'altezza */
+    font-style: italic; /* Impostato il testo in corsivo */
 }
-
 
 
 
@@ -715,12 +741,9 @@ document.addEventListener('DOMContentLoaded', () => {
 	
 <body>
     <div class="top-banner">
-        <a href="https://culture.roma.it/" class="tooltip-container" target="_blank" title="Questo link si apre in una nuova finestra">
-            <img src="roma.png" alt="Logo Roma" class="roma-logo">
-        </a>
-    </div>
-</body>
-
+  <a href="https://culture.roma.it/" class="tooltip-container" target="_blank">
+    <img src="roma.png" alt="Logo Roma" class="roma-logo">
+  </a>
 
 
 
