--- a/index.html
+++ b/index.html
@@ -724,9 +724,12 @@ document.addEventListener('DOMContentLoaded', () => {
 	
 <body>
     <div class="top-banner">
-  <a href="https://culture.roma.it/" class="tooltip-container" target="_blank">
-    <img src="roma.png" alt="Logo Roma" class="roma-logo">
-  </a>
+        <a href="https://culture.roma.it/" target="_blank" title="Questo link si apre in una nuova finestra">
+            <img src="roma.png" alt="Logo Roma" class="roma-logo">
+        </a>
+    </div>
+</body>
+
 
 
 
