--- a/index.html
+++ b/index.html
@@ -233,14 +233,16 @@ select.error {
         
         
 .top-banner {
-    height: 40px !important; /* Forza l'altezza fissa */
+    height: 40px !important;
     display: flex !important;
     align-items: center !important;
+    justify-content: space-between !important; /* Spazio tra logo e social icons */
     padding: 0 2rem !important;
     background-color: white !important;
     position: relative !important;
 }
 
+/* Stile per il contenitore del logo */
 .top-banner > a {
     height: 40px !important;
     display: flex !important;
@@ -249,7 +251,7 @@ select.error {
 }
 
 .roma-logo {
-    height: 40px !important;
+    height: 32px !important; /* Ridotto leggermente per miglior equilibrio */
     width: auto !important;
     vertical-align: middle !important;
     margin: 0 !important;
