--- a/index.html
+++ b/index.html
@@ -233,29 +233,22 @@ select.error {
         
         
 .top-banner {
-    height: 40px !important;
-    display: flex !important;
-    align-items: center !important;
-    justify-content: space-between !important; /* Spazio tra logo e social icons */
-    padding: 0 2rem !important;
-    background-color: white !important;
-    position: relative !important;
-}
-
-/* Stile per il contenitore del logo */
-.top-banner > a {
-    height: 40px !important;
-    display: flex !important;
-    align-items: center !important;
-    line-height: 1 !important;
+    height: 56px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.8rem 2rem;
+    background-color: white;
 }
 
 .roma-logo {
-    height: 32px !important; /* Ridotto leggermente per miglior equilibrio */
-    width: auto !important;
-    vertical-align: middle !important;
-    margin: 0 !important;
-    padding: 0 !important;
+    height: 40px;
+}
+
+.social-icons {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
 }
 
         .print-button {
