--- a/index.html
+++ b/index.html
@@ -232,23 +232,52 @@ select.error {
 
         
         
-.top-banner {
-    height: 56px;
+/* Reset specifico per il banner e i suoi elementi diretti */
+body > .top-banner {
+    height: 40px;
+    min-height: 40px;
+    max-height: 40px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0.8rem 2rem;
+    padding: 0 2rem;
     background-color: white;
+    box-sizing: border-box;
 }
 
-.roma-logo {
+/* Stile specifico per il contenitore del logo */
+body > .top-banner > a {
+    display: flex;
+    align-items: center;
+    height: 100%;
+}
+
+/* Stile specifico per il logo */
+body > .top-banner > a > .roma-logo {
     height: 40px;
+    width: auto;
+    display: block;
 }
 
-.social-icons {
+/* Stile specifico per il contenitore delle social icons */
+body > .top-banner > .social-icons {
     display: flex;
     align-items: center;
     gap: 1rem;
+    height: 100%;
+}
+
+/* Stile specifico per i link delle social icons */
+body > .top-banner > .social-icons > a {
+    display: flex;
+    align-items: center;
+    height: 100%;
+}
+
+/* Rimozione di stili tooltip problematici */
+body > .top-banner > a::before,
+body > .top-banner > a::after {
+    display: none !important;
 }
 
         .print-button {
