--- a/index.html
+++ b/index.html
@@ -740,11 +740,10 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 	
 <body>
-<div class="top-banner">
-  <div class="banner-content">
-    <a href="https://culture.roma.it/" target="_blank" title="Questo link si apre in una nuova finestra" class="logo-link">
-      <img src="roma.png" alt="Logo Roma" class="roma-logo">
-    </a>
+    <div class="top-banner">
+  <a href="https://culture.roma.it/" class="tooltip-container" target="_blank">
+    <img src="roma.png" alt="Logo Roma" class="roma-logo">
+  </a>
 
 
 
