--- a/index.html
+++ b/index.html
@@ -230,7 +230,15 @@ select.error {
     color: #d9292e;
 }
 
-        
+   .banner-content {
+    height: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}     
         
         .top-banner {
             background-color: white;
