--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@ document.addEventListener('DOMContentLoaded', () => {
 <body>
 <div class="top-banner">
   <div class="banner-content">
-    <a href="https://culture.roma.it/" target="_blank" title="Questo link si apre in una nuova finestra" class="logo-link">
+    <a href="https://culture.roma.it/" target="_blank" title="Questo link si apre in una nuova finestra" 
       <img src="roma.png" alt="Logo Roma" class="roma-logo">
     </a>
 
