--- a/index.html
+++ b/index.html
@@ -765,16 +765,16 @@ document.addEventListener('DOMContentLoaded', () => {
     </a>
 
 	
-    <a href="https://www.facebook.com/biblioteca.elsamorante?locale=it_IT" target="_blank" class="tooltip-container">
+    <a href="https://www.facebook.com/biblioteca.elsamorante?locale=it_IT" target="_blank" title="Questo link si apre in una nuova finestra">  class="tooltip-container">
       <i class="fab fa-facebook"></i>
     </a>
-    <a href="https://www.instagram.com/bibliotecaelsamorante/" target="_blank" class="tooltip-container">
+    <a href="https://www.instagram.com/bibliotecaelsamorante/" target="_blank" title="Questo link si apre in una nuova finestra">  class="tooltip-container">
       <i class="fab fa-instagram"></i>
     </a>
-    <a href="https://x.com/bibliomorante" target="_blank" class="tooltip-container">
+    <a href="https://x.com/bibliomorante" target="_blank" title="Questo link si apre in una nuova finestra">  class="tooltip-container">
       <i class="fab fa-x-twitter"></i>
     </a>
-    <a href="https://www.youtube.com/@bibliotecaelsamorante1172/featured" target="_blank" class="tooltip-container">
+    <a href="https://www.youtube.com/@bibliotecaelsamorante1172/featured" target="_blank" title="Questo link si apre in una nuova finestra">  class="tooltip-container">
       <i class="fab fa-youtube"></i>
     </a>
   </div>
