--- a/index.html
+++ b/index.html
@@ -758,26 +758,24 @@ document.addEventListener('DOMContentLoaded', () => {
 
 
 <div class="social-icons">
-    <a href="https://www.bibliotechediroma.it/opac" title="Cerca nel catalogo delle biblioteche di Roma" target="_blank">
+    <a href="https://www.bibliotechediroma.it/opac" title="Questo link si apre in una nuova finestra" target="_blank">
         <div style="background-color: #970a2c; width: 26px; height: 26px; display: flex; align-items: center; justify-content: center; border-radius: 4px;">
             <i class="fas fa-search" style="color: white; font-size: 14px;"></i>
         </div>
     </a>
 
-	
-    <a href="https://www.facebook.com/biblioteca.elsamorante?locale=it_IT" target="_blank" class="tooltip-container">
+    <a href="https://www.facebook.com/biblioteca.elsamorante?locale=it_IT" title="Questo link si apre in una nuova finestra" target="_blank" class="tooltip-container">
       <i class="fab fa-facebook"></i>
     </a>
-    <a href="https://www.instagram.com/bibliotecaelsamorante/" target="_blank" class="tooltip-container">
+    <a href="https://www.instagram.com/bibliotecaelsamorante/" title="Questo link si apre in una nuova finestra" target="_blank" class="tooltip-container">
       <i class="fab fa-instagram"></i>
     </a>
-    <a href="https://x.com/bibliomorante" target="_blank" class="tooltip-container">
+    <a href="https://x.com/bibliomorante" title="Questo link si apre in una nuova finestra" target="_blank" class="tooltip-container">
       <i class="fab fa-x-twitter"></i>
     </a>
-    <a href="https://www.youtube.com/@bibliotecaelsamorante1172/featured" target="_blank" class="tooltip-container">
+    <a href="https://www.youtube.com/@bibliotecaelsamorante1172/featured" title="Questo link si apre in una nuova finestra" target="_blank" class="tooltip-container">
       <i class="fab fa-youtube"></i>
     </a>
-  </div>
 </div>
 
     
