--- a/index.html
+++ b/index.html
@@ -537,7 +537,10 @@ document.head.appendChild(style);
   visibility: visible;
   opacity: 1;
 }
-
+/* Rimuovi le regole dei tooltip per i social */
+.social-icons a::before {
+    content: none !important;
+}
 /* Social icons tooltips */
 .social-icons .tooltip-container::before {
   bottom: -30px;
@@ -550,6 +553,7 @@ document.head.appendChild(style);
   padding: 3px 8px;
   font-size: 12px;
   font-style: italic;
+	display: none !important;
 }
 
 
@@ -750,35 +754,33 @@ document.addEventListener('DOMContentLoaded', () => {
 	
 </script>
 	
-<body> <div class="top-banner"> 
-	<a href="https://culture.roma.it/" target="_blank" title="Questo link si apre in una nuova finestra"> 
-	<img src="roma.png" alt="Logo Roma" class="roma-logo"> </a>
-
-
-
-
-<div class="social-icons">
-    <a href="https://www.bibliotechediroma.it/opac" title="Cerca nel catalogo delle biblioteche di Roma" target="_blank">
-        <div style="background-color: #970a2c; width: 26px; height: 26px; display: flex; align-items: center; justify-content: center; border-radius: 4px;">
-            <i class="fas fa-search" style="color: white; font-size: 14px;"></i>
-        </div>
+<body> 
+<div class="top-banner">
+    <a href="https://culture.roma.it/" target="_blank" title="Questo link si apre in una nuova finestra">
+        <img src="roma.png" alt="Logo Roma" class="roma-logo">
     </a>
+    <div class="social-icons">
+        <a href="https://www.bibliotechediroma.it/opac" target="_blank">
+            <div style="background-color: #970a2c; width: 26px; height: 26px; display: flex; align-items: center; justify-content: center; border-radius: 4px;">
+                <i class="fas fa-search" style="color: white; font-size: 14px;"></i>
+            </div>
+        </a>
+        <a href="https://www.facebook.com/biblioteca.elsamorante?locale=it_IT" target="_blank">
+            <i class="fab fa-facebook"></i>
+        </a>
+        <a href="https://www.instagram.com/bibliotecaelsamorante/" target="_blank">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://x.com/bibliomorante" target="_blank">
+            <i class="fab fa-x-twitter"></i>
+        </a>
+        <a href="https://www.youtube.com/@bibliotecaelsamorante1172/featured" target="_blank">
+            <i class="fab fa-youtube"></i>
+        </a>
+    </div>
+</div>
 
 	
-    <a href="https://www.facebook.com/biblioteca.elsamorante?locale=it_IT" target="_blank" class="tooltip-container">
-      <i class="fab fa-facebook"></i>
-    </a>
-    <a href="https://www.instagram.com/bibliotecaelsamorante/" target="_blank" class="tooltip-container">
-      <i class="fab fa-instagram"></i>
-    </a>
-    <a href="https://x.com/bibliomorante" target="_blank" class="tooltip-container">
-      <i class="fab fa-x-twitter"></i>
-    </a>
-    <a href="https://www.youtube.com/@bibliotecaelsamorante1172/featured" target="_blank" class="tooltip-container">
-      <i class="fab fa-youtube"></i>
-    </a>
-  </div>
-</div>
 
     
     
