--- a/termini.html
+++ b/termini.html
@@ -1045,6 +1045,14 @@ a:hover {
  <div class="library-name">
     <div class="library-info">
      
+<a href="https://www.openstreetmap.org/?mlat=41.7325117&mlon=12.2718834&zoom=18" 
+   target="_blank" 
+   title="Visualizza la posizione sulla mappa">
+    <img alt="Posizione" 
+         src="location.svg" 
+         class="location-icon h-5 w-5">
+</a>
+			
 <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
    target="_blank"
    class="biblioteca-link"
