--- a/raccolta.html
+++ b/raccolta.html
@@ -493,11 +493,12 @@ a:hover {
         <img src="roma.png" alt="Logo Roma" class="roma-logo">
     </a>
     <div class="social-icons">
-        <a href="https://www.bibliotechediroma.it/opac" target="_blank" title="Cerca nel catalogo delle biblioteche di Roma">
-            <div style="background-color: #970a2c; width: 26px; height: 26px; display: flex; align-items: center; justify-content: center; border-radius: 4px;">
-                <i class="fas fa-search" style="color: white; font-size: 14px;"></i>
-            </div>
-        </a>
+        
+<a href="https://www.bibliotechediroma.it/opac" target="_blank" title="Cerca nel catalogo delle biblioteche di Roma">
+    <div style="background-color: #970a2c; width: 26px; height: 26px; display: flex; align-items: center; justify-content: center; border-radius: 4px; transform: translateY(2px);">
+        <i class="fas fa-search" style="color: white; font-size: 14px;"></i>
+    </div>
+</a>
         <a href="https://www.facebook.com/biblioteca.elsamorante?locale=it_IT" target="_blank" title="Questo link si apre in una nuova finestra">
             <i class="fab fa-facebook"></i>
         </a>
