--- a/raccolta.html
+++ b/raccolta.html
@@ -549,12 +549,12 @@ a:hover {
 
 
         
-     <div class="flex items-center mb-4" style="color: #970a2c;">
-        <a href="https://www.openstreetmap.org/?mlat=41.7325117&mlon=12.2718834&zoom=18" 
-           target="_blank" 
-           title="Visualizza la posizione sulla mappa">
-            <img src="location.svg" alt="Location Icon" class="mr-2" style="height: 24px; width: 24px;">
-        </a>
+<div class="flex items-center mb-4">
+    <a href="https://www.openstreetmap.org/?mlat=41.7325117&mlon=12.2718834&zoom=18" target="_blank" title="Visualizza la posizione sulla mappa">
+        <img src="location.svg" alt="Location Icon" class="mr-2" style="height: 24px; width: 24px; filter: invert(13%) sepia(82%) saturate(2079%) hue-rotate(334deg) brightness(87%) contrast(101%); transition: filter 0.3s ease;" onmouseover="this.style.filter='invert(55%) sepia(18%) saturate(1500%) hue-rotate(314deg) brightness(92%) contrast(96%)'" onmouseout="this.style.filter='invert(13%) sepia(82%) saturate(2079%) hue-rotate(334deg) brightness(87%) contrast(101%)'">
+    </a>
+
+         
        <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
        class="text-xl" 
        style="color: #970a2c; font-size: 1rem; transition: color 0.3s ease;" 
