--- a/raccolta.html
+++ b/raccolta.html
@@ -551,11 +551,14 @@ a:hover {
         
 <div class="flex items-center mb-4">
 <!-- Find and replace the location icon link section with this updated code -->
+
 <a href="https://www.openstreetmap.org/?mlat=41.7325117&mlon=12.2718834&zoom=18" target="_blank" title="Visualizza la posizione sulla mappa">
   <img src="location.svg" alt="Location Icon" class="mr-2" style="height: 24px; width: 24px; 
+    /* Colore iniziale: #970a2c (rosso scuro) */
     filter: invert(13%) sepia(82%) saturate(2079%) hue-rotate(334deg) brightness(87%) contrast(101%);
     transition: filter 0.3s ease;"
-    onmouseover="this.style.filter='invert(55%) sepia(29%) saturate(1131%) hue-rotate(314deg) brightness(95%) contrast(96%)'"
+    /* Colore hover: #D34F6A (rosso chiaro) */
+    onmouseover="this.style.filter='invert(45%) sepia(45%) saturate(794%) hue-rotate(314deg) brightness(89%) contrast(92%)'"
     onmouseout="this.style.filter='invert(13%) sepia(82%) saturate(2079%) hue-rotate(334deg) brightness(87%) contrast(101%)'">
 </a>
          
