--- a/raccolta.html
+++ b/raccolta.html
@@ -554,11 +554,11 @@ a:hover {
 
 <a href="https://www.openstreetmap.org/?mlat=41.7325117&mlon=12.2718834&zoom=18" target="_blank" title="Visualizza la posizione sulla mappa">
   <img src="location.svg" alt="Location Icon" class="mr-2" style="height: 24px; width: 24px; 
-    /* Colore iniziale: #970a2c (rosso scuro) */
+    /* Colore iniziale esattamente come il rosso del titolo: #970a2c */
     filter: invert(13%) sepia(82%) saturate(2079%) hue-rotate(334deg) brightness(87%) contrast(101%);
-    transition: filter 0.3s ease;"
-    /* Colore hover: #D34F6A (rosso chiaro) */
-    onmouseover="this.style.filter='invert(45%) sepia(45%) saturate(794%) hue-rotate(314deg) brightness(89%) contrast(92%)'"
+    transition: filter 0.3s ease;
+    transform: none;"  /* Previene qualsiasi trasformazione */
+    onmouseover="this.style.filter='invert(71%) sepia(27%) saturate(895%) hue-rotate(308deg) brightness(103%) contrast(98%)'"
     onmouseout="this.style.filter='invert(13%) sepia(82%) saturate(2079%) hue-rotate(334deg) brightness(87%) contrast(101%)'">
 </a>
          
