--- a/termini.html
+++ b/termini.html
@@ -125,9 +125,12 @@
   gap: 8px;
 }
 
-.library-info a.tooltip-library {
-    font-weight: 400;
-    font-size: 12px;
+/* Aumentiamo la specificità del selettore */
+.library-info a.biblioteca-link, 
+.library-info a.tooltip-library,
+.library-name .library-info a {
+    font-weight: 400 !important;
+    font-size: 12px !important;
     color: #CC2226;
     display: flex;
     align-items: center;
