--- a/termini.html
+++ b/termini.html
@@ -141,7 +141,7 @@
 .library-info a.biblioteca-link:hover, 
 .library-info a.tooltip-library:hover,
 .library-name .library-info a:hover {
-    color: #c41239 !important; /* Rosso più chiaro all'hover */
+    color: #e6234d !important; /* Rosso più chiaro all'hover */
 }
 
 .library-info img {
