--- a/index.html
+++ b/index.html
@@ -1316,7 +1316,7 @@ window.createBookEntry = function() {
         <span class="text-gray-500 text-sm font-normal">(opzionale)</span>
         <span class="relative group">
           <i class="fas fa-info-circle text-gray-400 text-sm ml-1 cursor-pointer"></i>
-          <span class="absolute bottom-full left-1/2 transform -translate-x-1/2 mb-2 px-2 py-1 text-xs text-white bg-black rounded hidden group-hover:block">
+          <span class="absolute top-full left-0 transform mt-2 px-3 py-2 text-sm text-black bg-white border border-gray-300 rounded shadow-md hidden group-hover:block w-max">
             Cerca, seleziona e... boom! La scheda si completa al volo! Se preferisci, puoi inserire i dati manualmente.
           </span>
         </span>
@@ -1325,6 +1325,7 @@ window.createBookEntry = function() {
   </div>
 
 </div>
+
 
 
 
