--- a/index.html
+++ b/index.html
@@ -508,7 +508,10 @@ document.head.appendChild(style);
 
 
 
-
+/* Rimuovi le regole dei tooltip per i social */
+.social-icons a::before {
+    content: none !important;
+}
 
 
 
@@ -597,32 +600,33 @@ document.head.appendChild(style);
 }
 
 /* Modified Search & Click tooltip */
-  /* Tooltip visibile al passaggio del mouse */
-  .group:hover .tooltip {
-    visibility: visible;
-    opacity: 1;
+  .group:hover .group-hover\:visible {
+    visibility: visible !important;
+    opacity: 1 !important;
+    background-color: white !important;
+    color: black !important;
+    border: 1px solid #ddd !important;
+    white-space: nowrap !important;
+    width: max-content !important;
+    padding: 3px 8px !important;
+    font-size: 12px !important;
+    font-style: italic !important;
+    box-shadow: none !important;
+    font-family: inherit !important;
   }
 
-  /* Stile Tooltip */
-  .tooltip {
-    visibility: hidden;
-    opacity: 0;
-    position: absolute;
-    top: 30px; /* Posizionata sotto l'icona */
-    left: 0;
-    background-color: white;
-    color: black;
-    border: 1px solid #ddd;
-    padding: 5px 10px;
-    font-size: 12px;
-    font-family: Arial, sans-serif; /* Font semplice */
-    white-space: nowrap;
-    z-index: 10;
-    border-radius: 4px; /* Angoli leggermente arrotondati */
-    transition: opacity 0.2s ease-in-out;
+  /* Remove arrow from tooltip */
+  .group:hover .group-hover\:visible .transform {
+    display: none;
   }
 
-	
+  /* Position the tooltip like title */
+  .group:hover .group-hover\:visible {
+    top: -25px !important;
+    left: 0 !important;
+    transform: none !important;
+  }
+
   /* Adjust text width and wrapping */
   .group:hover .group-hover\:visible {
     max-width: 300px !important;
@@ -1333,18 +1337,22 @@ window.createBookEntry = function() {
 
 <!-- Sostituisci il div esistente con questo nuovo codice -->
 <div class="mb-5">
-  <div class="flex items-center gap-2 mb-2">
-    <label class="group flex items-center gap-2">
-      <i class="fas fa-book-open text-lg text-blue-600 group-hover:text-blue-400 transition-all duration-200"></i>
-      <span class="text-blue-600 font-medium group-hover:text-blue-400 transition-all duration-200 relative">
-        Search & click 
-        <span class="text-gray-500 text-sm font-normal">(opzionale)</span>
-        <span class="tooltip">
-          Cerca, seleziona e... boom! La scheda si completa al volo! Se preferisci, puoi inserire i dati manualmente.
+
+<div class="flex items-center gap-2 mb-2">
+    <label class="group flex items-center gap-2 cursor-help">
+        <i class="fas fa-book-open text-lg text-blue-600 group-hover:text-blue-400 transition-all duration-200"></i>
+        <span class="text-blue-600 font-medium group-hover:text-blue-400 transition-all duration-200 relative">
+            Search & click 
+            <span class="text-gray-500 text-sm font-normal">(opzionale)</span>
+            <div class="invisible group-hover:visible absolute left-0 top-6 w-72 p-3 bg-white border border-gray-200 text-gray-500 text-sm rounded-lg shadow-lg z-10">
+                <div class="absolute left-1/2 -translate-x-1/2 bottom-full mb-2 w-0 h-0 border-8 border-transparent border-b-white"></div>
+                <div class="absolute left-1/2 -translate-x-1/2 bottom-full mb-2 w-0 h-0 border-[9px] border-transparent border-b-gray-200"></div>
+                Cerca, seleziona e... boom! La scheda si completa al volo! Se preferisci, puoi inserire i dati manualmente.
+            </div>
         </span>
-      </span>
     </label>
-  </div>
+</div>
+
 </div>
 
 
